PR/8443: Yamano-uchi, Hidetoshi: Missing register in IODESC.